<resources>
    <string name="app_name">Hammer Time</string>
    <string name="app_icon_img_desc">App Icon</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Signup Fragment</string>
    <string name="bottom_nav_home_label">Home</string>
    <string name="signup_login_text">Already have an account? Log In</string>
    <string name="became_a_seller">Become a seller</string>
    <string name="complete_your_information">Complete your information</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter your Last name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="send">Send</string>
    <string name="upload_product">Upload a product</string>
    <string name="complete_product_info">Complete product information</string>
    <string name="product_name">Product name</string>
    <string name="enter_product_name">Enter the product name</string>
    <string name="upload_image">+ Upload image</string>
    <string name="select_way_selling">Select a way of selling it</string>
    <string name="direct_sale">Direct sale</string>
    <string name="bid">Bid</string>
    <string name="direct_sale_bid">Direct sale or bid</string>
    <string name="set_price">Set a price</string>
    <string name="set_price_purchase">Set the price for purchase</string>
    <string name="btn_continue">Continue</string>
    <string name="product_catalog">Product catalog</string>
    <string name="find_product">Find the product you are looking for</string>

    <string-array name="filter_array">
        <item>All</item>
        <item>Fixed Price</item>
        <item>Auction</item>
    </string-array>

    <string-array name="categories_array">
        <item>All</item>
        <item>Cars</item>
        <item>Home Appliances</item>
        <item>Hot Sales</item>
        <item>New Products</item>
    </string-array>

</resources>