<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_became_a_seller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/became_a_seller"
        android:textStyle="bold"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <TextView
        android:id="@+id/tv_complete_your_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_your_information"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_became_a_seller"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/five_sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_complete_your_information"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        android:hint="@string/enter_your_name"
        android:textColorHint="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textSize="@dimen/five_sp"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_last_name"
        android:hint="@string/enter_last_name"
        android:textColorHint="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="@dimen/five_sp"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:hint="@string/enter_email"
        android:textColorHint="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="@dimen/five_sp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@color/complete_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="phone"
        />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="50dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/button_color"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number"/>



</androidx.constraintlayout.widget.ConstraintLayout>